src/css/style.css
:root {
    --base-color: white;
    --workCardAndFooter-color: #EEEEEE;
    --tagAndGithubBorder-color: whitesmoke;
    --footerBorderAndTagBorder-color: gray;
    --carouselContainerBorder-color: black;
    --carouser-color: white;
    --text-color: black;
}

.darkMode {
    --base-color: #25343F;
    --workCardAndFooter-color: #25343F;
    --tagAndGithubBorder-color: whitesmoke;
    --footerBorderAndTagBorder-color: gray;
    --carouselContainerBorder-color: black;
    --carouser-color: whitesmoke;
    --text-color: whitesmoke;
}

html {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    scroll-behavior: smooth;
}

#techStack {
    padding: 30px;
}

#worksExperience {
    padding: 30px;
}

#myProjects {
    padding: 30px;
}

body{
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 0px;
    width: 100%;
    color: var(--text-color);
    background-color: var(--base-color);
}

.navbarContainer {
    z-index: 2;
    background-color: var(--base-color);
    position: fixed;
    height: 60px;
    width: 100%;
    display: flex;
    justify-content: center;
    background-color: var(--base-color);
    border-bottom: 1px solid gray;
}

.navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 1000px;
}

#textIcon {
    padding-top: 10px;
    height: 45px;
    color: var(--text-color);
}

.navbarButtonContainer {
  
}

#navbarUl{
    list-style: none;
    width: 100%;
    display: flex;
    justify-content: left;
    align-items: center;
}

.navbarButton {
    height: 50px;
    width: 100px;
    border: none;
    background-color: var(--base-color);
    font-size: medium;
    color: var(--text-color);
}

.padding {
    height: 70px;
}

.contents {
    width: 1000px;
}

.main {
    margin-top: 20px;
    height: 500px;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 50px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.identity {
    display: flex;
    flex-direction: column;
}

#profilePic{
    width: 272px;
    height: 362px;
    border-radius: 5%;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.introduction {
    height: 400px;
    width: 50%;
    padding: 40px;
    font-size: large;
    display: flex;
    flex-direction: column;
}

#location {
    display: flex;
    align-items: center;
}

#homeIcon {
    padding-right: 5px;
    height: 30px;
}

.reachOutButton {
    margin-top: 5px;
    font-size: larger;
    background-color: #9AD872;
    width: 150px;
    border-radius: 10px;
    padding-top: 5px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.reachOut {
    text-decoration: none;
}

.reachOutIcon {
    height: 20px;
}

.address {
    
}

#location {
    background-color: var(--carouser-color);
    width: 230px;
    color: black;
}

.carouselContainer {
    border: 5px solid var(--carouselContainerBorder-color);
    background-color: var(--carouser-color);
    border-top: 0px;
    border-bottom: 0px;
}

.carousel {
    display: flex;
    overflow-x: auto;
}

.carousel::-webkit-scrollbar {
    display: none;
}

.carouselGroup{
    display: flex;
    animation: spin 15s infinite linear;
}

.carouselCard {
    display: flex;
    margin-top: 5px;
    margin-bottom: 5px;
    flex:  0 0 5em;
    height: 60px;
    text-align: center;
    align-content: center ;
    margin-left: 70px;
    margin-right: 70px;
}

.imgCard {
    height: 60px;
}

@keyframes spin {
    from {translate: 0;}
    to {translate: -100%;}
}

.workExperiencesContainer {
    min-height: 20px;
    padding-top: 10px;
    padding-bottom: 20px;
    display: flex;
    flex-direction: column;
}

.workCard {
    background-color: var(--workCardAndFooter-color);
    display: flex;
    width: 96%;
    justify-content: space-between;
    margin-bottom: 50px;
    padding-left: 20px;
    padding-bottom: 20px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.corporation {
    display: flex;
}

.workImage {
    margin-top: 20px;
    height: 100px;
    width: 100px;
    margin-right: 10px;
}

.workingTimeArea {
    flex-direction: row-reverse;
    margin-right: 20px;
}

.myProjects {
    display: flex;
    flex-direction: column;
}

.projectsContainer {
    width: 100%;
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}

.projectsCard {
    display: flex;
    flex-direction: column;
    margin-top: 20px;
    margin-bottom: 50px;
    width: 450px;
    align-items: center;
    border-radius: 10px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.projectImage {
    margin-top: 20px;
    height: 200px;
}

.projectIntro {
    height: 100px;
    margin: 10px;
}

.projectIntroText {
    height: 100%;
    overflow: hidden;
}

.projectTagsContainer {
    display: flex;
    flex-wrap: wrap;
    gap: 5px;
}

.projectTags {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 30px;
    margin-top: 10px;
    padding-left: 5px;
    padding-right: 5px;
    border-radius: 10px;
    border: 1px solid var(--footerBorderAndTagBorder-color);
    background-color: var(--tagAndGithubBorder-color);
    color: black;
    margin-bottom: 40px;
}

.toGithub {
    margin: 10px;
    border-radius: 5px;
    font-size: medium;
    border: 1px solid var(--tagAndGithubBorder-color);
    background-color: var(--base-color);
}

.contactH1 {
    text-align: center;
}

.contactP {
    text-align: center;
    font-size: large;
}

.contactAddressContainer {
    width: 100%;
    height: 15px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.contactAddress {
    width: 500px;
    text-align: center;
    font-size: large;
    color: inherit;
    background-color: var(--carouser-color);
}

.contactIcon {
    height: 15px;
    padding-bottom: 0px;
    margin-right: 5px;
}

.footerContainer {
    width: 100%;
    height: 50px;
    margin-top: 70px;
    border-top: 1px solid var(--footerBorderAndTagBorder-color);
    background-color: var(--workCardAndFooter-color);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-end;
}

